.gcloud/production/05-ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sidekiq
  namespace: production
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
spec:
  tls:
  - hosts:
    - sidekiq.theartwishlist.com
    secretName: sidekiq-tls
  rules:
  - host: sidekiq.theartwishlist.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: sidekiq
          servicePort: 80
